--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -15,5 +15,5 @@ jobs:
       - name: python Command
         run: |
           import platform
-          print(platform.proceessor())
+          print(platform.processor())
         shell: python
