actions checkout test

--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -9,6 +9,12 @@ jobs:
       - name: List Files
         run: |
           pwd
+          ls -a
+      - name: Checkout
+        uses: actions/checkout@v2.3.4
+      - name: List Files After
+        run: |
+          pwd
           ls
       - name: Simple JS Action
         id: greet
