--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -10,12 +10,18 @@ jobs:
         run: |
           pwd
           ls -a
+          echo $GITHUB_SHA
+          echo $GITHUB_REPOSITORY
+          echo $GITHUB_WORKSPACE
+          echo "${{ github.token }}"
+          #git clone git@github:$GITHUB_REPOSITORY
+          #git checkout $GITHUB_SHA
       - name: Checkout
         uses: actions/checkout@v1
       - name: List Files After
         run: |
           pwd
-          ls
+          ls -a
       - name: Simple JS Action
         id: greet
         uses: actions/hello-world-javascript-action@v1.1
