--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -22,7 +22,7 @@ jobs:
         run: |
           pwd
           ls -a
-      - name: Simple JS Action
+      - name: Simple JavaScript Action
         id: greet
         uses: actions/hello-world-javascript-action@v1.1
         with:
