--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -12,6 +12,24 @@ jobs:
     permissions:
       issues: write 
     steps:
+      - name: Push a random Files
+        run: | #the pipe signifies multiline
+          pwd
+          ls -a
+          git init
+          git remote add origin "https://$GITHUB_ACTOR:{{ secrets.GITHUB_TOKEN }}@github.com/$GITHUB_REPOSITORY.git"
+          git config --global user.email "autobot.sample@bot.com"
+          git config --global user.email "autobot2.sample@bot.com"
+          git fetch
+          git checkout master
+          git branch --set-upstream-to=origin/master
+          git pull_request
+          ls -a
+          echo $RANDOM >> random.txt
+          ls -a
+          git add -A
+          git commit -m"randome file"
+          git push
       - name: Create issue using REST API
         run: |
           curl --request POST \
