typo error, from pull, not pull_request

--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -21,9 +21,9 @@ jobs:
           git config --global user.email "autobot.sample@bot.com"
           git config --global user.email "autobot2.sample@bot.com"
           git fetch
-          git checkout main
-          git branch --set-upstream-to=origin/main
-          git pull_request
+          git checkout master
+          git branch --set-upstream-to=origin/master
+          git pull
           ls -a
           echo $RANDOM >> random.txt
           ls -a
