--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -19,7 +19,7 @@ jobs:
           git init
           git remote add origin "https://$GITHUB_ACTOR:{{ secrets.GITHUB_TOKEN }}@github.com/$GITHUB_REPOSITORY.git"
           git config --global user.email "autobot.sample@bot.com"
-          git config --global user.name "autobot"
+          git config --global user.name "paul"
           git fetch
           git checkout main
           git branch --set-upstream-to=origin/main
