removed the permissions tag which might be the cause of the error

--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -9,8 +9,6 @@ env:
 jobs: 
   create-issue:
     runs-on: ubuntu-latest 
-    permissions:
-      issues: write 
     steps:
       - name: Push a random Files
         run: | #the pipe signifies multiline
@@ -28,7 +26,7 @@ jobs:
           echo $RANDOM >> random.txt
           ls -a
           git add -A
-          git commit -m"randome file"
+          git commit -m"random file"
           git push
       - name: Create issue using REST API
         run: |
