--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -9,6 +9,8 @@ env:
 jobs: 
   create-issue:
     runs-on: ubuntu-latest 
+    permissions:
+      issues: write 
     steps:
       - name: Push a random Files
         run: | #the pipe signifies multiline
@@ -16,8 +18,8 @@ jobs:
           ls -a
           git init
           git remote add origin "https://$GITHUB_ACTOR:{{ secrets.GITHUB_TOKEN }}@github.com/$GITHUB_REPOSITORY.git"
-          git config --global user.email "autobot.sample@bot.com"
-          git config --global user.name "paul"
+          git config --global user.email "paulloreto@gmail.com"
+          git config --global user.name "$GITHUB_ACTOR"
           git fetch
           git checkout main
           git branch --set-upstream-to=origin/main
