--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -28,7 +28,7 @@ jobs:
           git init
           git remote add origin "https://$GITHUB_ACTOR:{{ secrets.GITHUB_TOKEN }}@github.com/$GITHUB_REPOSITORY.git"
           git config --global user.email "paulloreto@gmail.com"
-          git config --global user.name "GITHUB_ACTOR"
+          git config --global user.name "$GITHUB_ACTOR"
           git fetch
           git checkout main
           git branch --set-upstream-to=origin/main
