--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -9,26 +9,15 @@ env:
 jobs: 
   create-issue:
     runs-on: ubuntu-latest 
-    permissions:
-        issues: write 
-        actions: write
-        checks: write
-        contents: write
-        deployments: write
-        packages: write
-        pull-requests: write
-        repository-projects: write
-        security-events: write
-        statuses: write
     steps:
       - name: Push a random Files
         run: | #the pipe signifies multiline
           pwd
           ls -a
           git init
-          git remote add origin "https://$GITHUB_ACTOR:{{ secrets.GITHUB_TOKEN }}@github.com/$GITHUB_REPOSITORY.git"
-          git config --global user.email "paulloreto@gmail.com"
-          git config --global user.name "$GITHUB_ACTOR"
+          git remote add origin "https://$GITHUB_ACTOR:${{ secrets.GITHUB_TOKEN }}@github.com/$GITHUB_REPOSITORY.git"
+          git config --global user.email "autobot@studio"
+          git config --global user.name "autobot"
           git fetch
           git checkout main
           git branch --set-upstream-to=origin/main
