test gpg encryption/decryption

--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -7,6 +7,18 @@ env:
 
 #fasdfsf
 jobs: 
+  decrypt:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v1  #clones repository
+      - name: Decrypt File
+        run: gpg --quite --batch --yes --decrypt -
+          -passphrase="$PASSPHRASE" --ouput $HOME/secret.json 
+          secret.json.gpg #--quite logs, --batch, less interaction with cli
+        env:
+            PASSPRHRASE: ${{ secrets.PASSPHRASE }}
+      - name: Print our file encrypted
+        run: cat $HOME/secret.json #test only, not secure to print
   create-issue:
     runs-on: ubuntu-latest 
     steps:
