type spelling for quiet

--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
       - uses: actions/checkout@v1  #clones repository
       - name: Decrypt File
-        run: gpg --quite --batch --yes --decrypt 
+        run: gpg --quiet --batch --yes --decrypt 
           --passphrase="$PASSPHRASE" --ouput $HOME/secret.json 
           secret.json.gpg #--quite logs, --batch, less interaction with cli
         env:
