type error output

--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -13,8 +13,7 @@ jobs:
       - uses: actions/checkout@v1  #clones repository
       - name: Decrypt File
         run: gpg --quiet --batch --yes --decrypt 
-          --passphrase="$PASSPHRASE" --ouput $HOME/secret.json 
-          secret.json.gpg #--quite logs, --batch, less interaction with cli
+          --passphrase="$PASSPHRASE" --output $HOME/secret.json secret.json.gpg #--quite logs, --batch, less interaction with cli
         env:
             PASSPRHRASE: ${{ secrets.PASSPHRASE }}
       - name: Print our file encrypted
