typo PASSPRHASE spelling

--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -15,7 +15,7 @@ jobs:
         run: gpg --quiet --batch --yes --decrypt 
           --passphrase="$PASSPHRASE" --output $HOME/secret.json secret.json.gpg #--quite logs, --batch, less interaction with cli
         env:
-            PASSPRHRASE: ${{ secrets.PASSPHRASE }}
+            PASSPHRASE: ${{ secrets.PASSPRHASE }}
       - name: Print our file encrypted
         run: cat $HOME/secret.json #test only, not secure to print
   create-issue:
