--- a/.github/workflows/context.yml
+++ b/.github/workflows/context.yml
@@ -1,16 +1,18 @@
 name: Context
 
-on: push
+on: [ push, pull_request ]
 
 jobs:
   one:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-16.04
+    if: github.event_name == 'push'
     steps:
       - name: Dump GitHub context
         env:
           GITHUB_CONTEXT: ${{ toJSON(github) }}
         run: echo "$GITHUB_CONTEXT"
       - name: Dump job context
+        if: failure()
         env:
           JOB_CONTEXT: ${{ toJSON(job) }}
         run: echo "$JOB_CONTEXT"
@@ -23,6 +25,7 @@ jobs:
           RUNNER_CONTEXT: ${{ toJSON(runner) }}
         run: echo "$RUNNER_CONTEXT"
       - name: Dump strategy context
+        if: always()
         env:
           STRATEGY_CONTEXT: ${{ toJSON(strategy) }}
         run: echo "$STRATEGY_CONTEXT"
