--- a/.github/workflows/context.yml
+++ b/.github/workflows/context.yml
@@ -10,7 +10,7 @@ jobs:
       - name: Dump GitHub context
         env:
           GITHUB_CONTEXT: ${{ toJSON(github) }}
-        run: echo "$GITHUB_CONTEXT"
+        run: eecho "$GITHUB_CONTEXT"
       - name: Dump job context
         if: failure()
         env:
