--- a/.github/workflows/matrix.yml
+++ b/.github/workflows/matrix.yml
@@ -9,6 +9,6 @@ jobs:
         run: node -v
       - uses: actions/setup-node@v2
         with:
-          node-version: '14'
+          node-version: 6
       - name: Log node version again
         run: node -v
