--- a/.github/workflows/matrix.yml
+++ b/.github/workflows/matrix.yml
@@ -3,12 +3,18 @@ on: push
 
 jobs:
   node-version:
-    runs-on: ubuntu-latest
+    strategy:
+      matrix: #just similar to an array , can be 1D, or 2D
+        os: [macos-latest, ubuntu-latest, windows-latest]
+        #node version 6, 8, 10
+        node_version: [6, 8, 10]   #by default, gitHub can run 2 jobs in parrallel  
+    runs-on: ${{ matrix.os }}
     steps:
       - name: Log node version
         run: node -v
       - uses: actions/setup-node@v2
         with:
-          node-version: 6
+          node-version: ${{ matrix.node_version }}
       - name: Log node version again
         run: node -v
+ 
