--- a/.github/workflows/matrix.yml
+++ b/.github/workflows/matrix.yml
@@ -8,7 +8,18 @@ jobs:
         os: [macos-latest, ubuntu-latest, windows-latest]
         #node version 6, 8, 10
         node_version: [6, 8, 10]   #by default, gitHub can run 2 jobs in parrallel  
+        include:  
+          - os: ubuntu-latest
+            node_version: 8
+            is_ubuntu_8: "true"
+        exclude:
+          - os: ubuntu-latest
+            node_version: 6
+          - os: macos-latest
+            node_version: 8
     runs-on: ${{ matrix.os }}
+    env:
+      IS_UBUNTU_8: ${{ matrix.is_ubuntu_8 }}
     steps:
       - name: Log node version
         run: node -v
@@ -16,5 +27,7 @@ jobs:
         with:
           node-version: ${{ matrix.node_version }}
       - name: Log node version again
-        run: node -v
+        run: |
+          node -v
+          echo $IS_UBUNTU_8
  
