--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -19,4 +19,4 @@ jobs:
         -H ''Content-Type: application/json'' -d '' 
         {"username": "hello", "address": "dwdeed"}'''
       - name: Get Users
-        run: curl http://localhost:3001/api/user
+        run: curl http://localhost:3001/api/users
