--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -14,7 +14,7 @@ jobs:
         ports:
           - "27017:27017"
     steps:
-      - name: Post a user
+      - name: Post a User
         run: 'curl -X POST http://localhost:3001/api/user 
         -H ''Content-Type: application/json'' -d '' 
         {"username": "hello", "address": "dwdeed"}'''
