--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -2,6 +2,24 @@ name: Container
 on: push
 
 jobs: 
+  docker-steps:
+    runs-on: ubuntu-latest
+    container: #containers can only run on Ubuntu
+      image: node:10.18.0-jessie
+    steps:
+      - name: log node version
+        run: node -v
+      - name: Step with docker
+        uses: docker://node:12-alpine3.14
+        with: 
+          entrypoint: '/bin/echo'
+          args: "Hello World"
+      - name: Log node version
+        uses: docker://node:12-alpine3.14
+        with:
+          entrypoint: /Users/paul/.nvm/versions/node/v16.6.1/bin/node
+          args: -v
+
   node-docker:
     runs-on: ubuntu-latest
     services: 
