--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Log node version
         uses: docker://node:12-alpine3.14
         with:
-          entrypoint: /Users/paul/.nvm/versions/node/v16.6.1/bin/node
+          entrypoint: /usr/local/bin/node
           args: -v
 
   node-docker:
