--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -19,6 +19,12 @@ jobs:
         with:
           entrypoint: /usr/local/bin/node
           args: -v
+      - uses: actions/checkout@v1
+      - name: Run a script
+        uses: docker://node:12-alpine3.14
+        with:
+          entrypoint: ./script.sh
+          args: "some string"
 
   node-docker:
     runs-on: ubuntu-latest
