Send a slack message

--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -25,6 +25,12 @@ jobs:
         with:
           entrypoint: ./script.sh
           args: "some string"
+      - name: Send a Slack Message
+        uses: docker://technosophos/slack-notify
+        env: 
+          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK  }}
+          SLACK_MESSAGE: "Hello Slack"
+          
 
   node-docker:
     runs-on: ubuntu-latest
